Fix image thumbnail overflow in home search

--- a/app/assets/stylesheets/home_search.scss
+++ b/app/assets/stylesheets/home_search.scss
@@ -62,12 +62,13 @@
   width: 100%;
   height: 100%;
   margin-right: 2px;
+  overflow: hidden;
 }
 
 .thumbnail-image {
   display: block;
   border-radius: 4px;
-  width: 100%;
+  // width: 100%;
   height: 250px;
   width: 375px;
 }
